--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Hsinhan <bmhiamso1@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
     "express": "^4.16.2",
     "linebot": "^1.3.0"
   },
